--- a/src/main/resources/templates/base-jump.html
+++ b/src/main/resources/templates/base-jump.html
@@ -16,10 +16,13 @@
 <script src="/plugins/jQueryUI/jquery-ui.min.js"></script>
 <script language='javascript' th:inline="javascript">
     $(document).ready(function () {
+        // 缓存用户名
         var username = [[${user.username}]];
         window.localStorage.setItem("username", username);
+        // 缓存用户权限
         var authorities = [[${user.authorities}]];
         window.localStorage.setItem("authorities", JSON.stringify(authorities));
+
         location.href="/index";
     });
 </script>
