--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -249,7 +249,7 @@
         }
         // 导航栏用户名
         var username = window.localStorage.getItem("username");
-        $('#username1').innerText=username;
-        $('#username2').innerText=username;
+        document.getElementById("username1").innerText=username;
+        document.getElementById("username2").innerText=username;
     </script>
 </header>
