--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -69,12 +69,12 @@
     <script>
         // 菜单栏用户名
         var username = window.localStorage.getItem("username");
-        $("#username3").innerText=username;
+        document.getElementById("username3").innerText=username;
 
         // 没有管理员权限不展示系统管理
         var authorities = window.localStorage.getItem("authorities");
         if (authorities.indexOf("{\"authority\":\"admin\"}") < 0) {
-            $("#system-manager").remove();
+            document.getElementById("system-manager").remove();
         }
     </script>
 </aside>
