--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -223,8 +223,8 @@
                             <img src="/img/user2-160x160.jpg" class="imgcircle"
                                  alt="User Image">
                             <p>
-                                <span id="username2"></span> - 系统管理员
-                                <small>最后登录 11:20AM</small>
+                                <span id="username2"></span>
+                                <small>最后登录时间:<span id="login-time"></span></small>
                             </p>
                         </li>
                         <!-- Menu Footer-->
@@ -244,12 +244,16 @@
     </nav>
     <script>
         // 没有找到缓存则重新登录
-        if (!window.localStorage.hasOwnProperty("username") || !window.localStorage.hasOwnProperty("authorities")) {
+        if (!window.localStorage.hasOwnProperty("username") || !window.localStorage.hasOwnProperty("authorities")
+            || !window.localStorage.hasOwnProperty("loginTime")) {
             location.href="/";
         }
         // 导航栏用户名
         var username = window.localStorage.getItem("username");
         document.getElementById("username1").innerText=username;
         document.getElementById("username2").innerText=username;
+        // 最后登录时间
+        var loginTime = window.localStorage.getItem("loginTime");
+        document.getElementById("login-time").innerText=loginTime;
     </script>
 </header>
